fixed alignment issues, added glass/blur fx on navbar

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Lato, sans-serif;
     background-color: #000000;
-    padding-top: 6rem;
+    padding-top: 4.5rem;
 }
 
 h4 {
@@ -28,8 +28,9 @@ p {
     }
 }
 
+
 .rc-wrapper-gallery {
-    max-width: 900px;
+    max-width: 1140px;
 }
 
 .nav-item,
@@ -41,17 +42,22 @@ p {
 
 .rc-navbar {
     min-height: 4.5rem;
-    background-color: black;
-    font-weight: 600;
+    font-weight: 400;
     letter-spacing: .5px;
 }
 
+.blur-filter {
+    backdrop-filter: saturate(180%) blur(20px);
+}
+
 .rc-navbar-container {
-    border-bottom: 1px solid #1c1c1e;
+    /*border-bottom: 1px solid #1c1c1e;*/
+    background-color: rgba(0,0,0,.78);
+    border-bottom: 1px solid rgba(255, 255, 255, .15);
 }
 
 .rc-navbar-container-inner {
-    max-width: 910px;
+    max-width: 1150px;
 }
 
 .rc-dropdown-menu {
@@ -63,7 +69,7 @@ p {
     background-color: #ddd;
 }
 
-/* ANIMATED TOGGLER (X) */
+/*ANIMATED TOGGLER (X)*/
 .navbar-toggler.x {
     border: none;
 }
@@ -125,7 +131,6 @@ p {
     transform: rotate(0);
 }
 
-
 /* GALLERT ITEM OVERLAY */
 .rc-gallery-item-overlay {}
 
@@ -170,7 +175,7 @@ p {
 }
 
 .rc-dropdown-menu {
-    background-color: #1c1c1e;
+    background-color: rgba(28,28,30,1);
 }
 
 .rc-dropdown-item {
